[metadata]
name = mint
version = 0.3.0
author = Baptiste Grimaud
author_email = baptiste.grimaud@ens-paris-saclay.fr
url = https://github.com/biophotlumin/mint
description = Live microscopy particle tracking
long_description = file: README.md
long_description_content_type = text/markdown
keywords = neuroscience, nanoparticle, tracking
license = GNU General Public License v3.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux       
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    cvxpy >= 1.4.1
    fpdf2 == 2.7.6
    imageio >= 2.32.0
    joblib >= 1.3.2
    matplotlib >= 3.8.0
    nd2 >= 0.8.1
    numba >= 0.58
    numpy >= 1.26.2
    opencv-python >= 4.8.1
    pandas >= 1.5.2
    PyYAML >= 6.0.1
    scikit_posthocs >= 0.8.0
    scipy >= 1.11.4
    scs >= 3.2.4
    seaborn >= 0.13.0
    trackpy >= 0.6.1

zip_safe = True
include_package_data = True

[options.extras_require]
notebook = 
    jupyter >= 1.0.0

bioformats = 
    JPype1 == 1.4.1
    pyimagej == 1.4.1

gui = 
    PySide6 >= 6.5.2

solvers = 
    mosek >= 10.1.16
    gurobipy >= 10.0.3

all = 
    mint[notebook]
    mint[bioformats]
    mint[gui]
    mint[solvers]

[options.entry_points]
console_scripts = 
    mint = mint.mint:main

[options.package_data]
# example = data/schema.json, *.txt
* = README.md